// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerProgressBar [snapshot] should render the "Progress0" component correctly 1`] = `
<div
  class="overflow-hidden h-1 rounded-full bg-primary/20"
>
  <div
    class="h-full bg-primary"
    style="width: 0%;"
  />
</div>
`;

exports[`PlayerProgressBar [snapshot] should render the "Progress42" component correctly 1`] = `
<div
  class="overflow-hidden h-1 rounded-full bg-primary/20"
>
  <div
    class="h-full bg-primary"
    style="width: 42%;"
  />
</div>
`;

exports[`PlayerProgressBar [snapshot] should render the "Progress50" component correctly 1`] = `
<div
  class="overflow-hidden h-1 rounded-full bg-primary/20"
>
  <div
    class="h-full bg-primary"
    style="width: 50%;"
  />
</div>
`;

exports[`PlayerProgressBar [snapshot] should render the "Progress100" component correctly 1`] = `
<div
  class="overflow-hidden h-1 rounded-full bg-primary/20"
>
  <div
    class="h-full bg-primary"
    style="width: 100%;"
  />
</div>
`;
